# ros2-starter

./: .gitignore  DEPLOY.md  Dockerfile.release  README.md  compile.sh  compile_debug.sh  create_mamba.sh  debug_dependency.sh  docker-compose.yml  gazebo.sh  gazebo_gz.sh  init_project.sh  install_dependencies.sh  mamba.sh  preinstall.sh  raiz.sh  run.sh  setup_ros.sh  update_mamba.sh
.devcontainer/: devcontainer.json
charge-port/: CMakeLists.txt  PLAN.md  README.md  TEST.md  package.xml  requirements.txt
charge-port/config/controllers/: arm_controllers.yaml
charge-port/dataset/: charging_port.yaml
charge-port/include/charge_port/: hardware_node.hpp
charge-port/launch/: simulation.launch.py  simulation_gz.launch.py
charge-port/msg/: ChargingStatus.msg
charge-port/scripts/: detection_node.py  train_charging.py
charge-port/src/: hardware_node.cpp
charge-port/test/: test_detection.py  test_integration.py  test_utils.cpp
charge-port/urdf/: charging_robot.urdf.xacro  charging_robot_gz.urdf.xacro
ros-starter/: preinstall.sh
ros2-starter/: CMakeLists.txt  package.xml
ros2-starter/action/: Fibonacci.action
ros2-starter/include/ros2-starter/: visibility_control.h
ros2-starter/scripts/: py_add_two_ints_client.py  py_fibonacci_action_client.py  py_listener.py
ros2-starter/src/: cpp_add_two_ints_client.cpp  cpp_add_two_ints_server.cpp  cpp_fibonacci_action_client.cpp  cpp_fibonacci_action_server.cpp  cpp_talker.cpp
src/charging_behavior/: package.xml  setup.cfg  setup.py
src/charging_behavior/charging_behavior/: arm_test_node.py  task_manager.py
src/charging_bringup/: CMakeLists.txt  package.xml
src/charging_bringup/include/charge_port/: utils.hpp
src/charging_bringup/launch/: bringup.launch.py
src/charging_bringup/src/: hardware_node.cpp  utils.cpp
src/charging_interfaces/: CMakeLists.txt
src/charging_interfaces/msg/: ChargingStatus.msg
src/charging_perception/: package.xml  setup.cfg  setup.py
src/charging_perception/charging_perception/: detection_node.py  train_charging.py
src/charging_perception/config/: parking_regions.json
src/charging_robot_description/: CMakeLists.txt  package.xml
src/charging_robot_moveit_config/config/: charging_robot.srdf  moveit_controllers.yaml
src/charging_sim/: CMakeLists.txt  package.xml
src/charging_sim/launch/: simulation.launch.py  simulation_gz.launch.py
src/charging_sim/worlds/: parking_lot.world  parking_lot_gz.world
