<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charging_behavior</name>
  <version>0.0.1</version>
  <description>Behavior Tree based charging task management</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>charging_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
